syntax = "proto3";

package happened_service.v1;

option go_package = "happenedapi/gen/protos/v1;happenedv1";


message GreetRequest {
  string name = 1;
}

message GreetResponse {
  string greeting = 1;
}


message CreateEventRequest {

}

message CreateEventResponse {

}


service HappenedService {
  rpc Greet(GreetRequest) returns (GreetResponse) {}
  rpc CreateEvent(CreateEventRequest) returns (CreateEventResponse) {}
}